kubernetes/infra/monitoring/grafana/_base/httproute.yaml
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
spec:
  hostnames: ["grafana.${SECRET_DOMAIN}"]
  parentRefs:
    - name: external
      namespace: network
  rules:
    - backendRefs:
        - name: grafana-service
          port: 3000
